--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <a class="navbar-brand js-scroll-trigger" href="#page-top">
         <span class="d-block d-lg-none">Start Bootstrap</span>
         <span class="d-none d-lg-block">
-          <!-- <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="C:\Users\Lenovo\Download/profile.jpg"> -->
+          <!-- <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.jpg" alt=""> -->
         </span>
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -42,9 +42,9 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#about">About</a>
           </li>
-          <!-- <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
-          </li> -->
+          <li class="nav-item">
+            <!-- <a class="nav-link js-scroll-trigger" href="#experience">Experience</a> -->
+          </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#education">Education</a>
           </li>
@@ -55,7 +55,7 @@
             <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#certifications">certifications</a>
+            <a class="nav-link js-scroll-trigger" href="#Certification">Certification</a>
           </li>
         </ul>
       </div>
@@ -65,16 +65,16 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
         <div class="my-auto">
-          <h1 class="mb-0">Nischitha 
+          <h1 class="mb-0">Nischitha
             <span class="text-primary">A T</span>
           </h1>
           <div class="subheading mb-5">Ankanahalli(V), kandegala(P), Malavalli(T), Mandya(D) Karnataka-571430
             <a href="mailto:name@email.com">nischithaat2001@email.com</a>
           </div>
-          <!-- <p class="mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p> -->
-          <!-- <ul class="list-inline list-social-icons mb-0"> -->
-            <!-- <li class="list-inline-item"> -->
-              <!-- <a href="#">
+          <!-- <p class="mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+          <ul class="list-inline list-social-icons mb-0">
+            <li class="list-inline-item">
+              <a href="#">
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
@@ -173,14 +173,14 @@
               <p>CGPA: 6.5</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">August 2019 - June 2023</span>
+              <span class="text-primary">August 2019 - june 2023</span>
             </div>
           </div>
 
-          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">JSS Women's PU college, Mysore</h3>
-              <div class="subheading mb-3">2nd PU</div>
+              <div class="subheading mb-3">PUC</div>
               <div>PCMB</div>
               <p>percentage: 53%</p>
             </div>
@@ -188,6 +188,7 @@
               <span class="text-primary">May 2017 - March 2019</span>
             </div>
           </div>
+
 
           <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
@@ -244,28 +245,28 @@
             </li>
           </ul>
 
-          <div class="subheading mb-3">Skills </div>
+          <div class="subheading mb-3">Skills</div>
           <ul class="fa-ul mb-0">
             <li>
               <i class="fa-li fa fa-check"></i>
-               C Programming</li>
+              C Programming</li>
             <li>
             <li>
               <i class="fa-li fa fa-check"></i>
-               Python Programming</li>
-            <li>
+              Python Programming</li>
+              <li>
               <i class="fa-li fa fa-check"></i>
-              Java Programming &amp; Debugging</li>
+              Java Programming&amp; Debugging</li>
             <li>
               <i class="fa-li fa fa-check"></i>
               Data structure and Algorithm</li>
             <li>
-            <li>
               <i class="fa-li fa fa-check"></i>
-              SQL</li>
-            <li>
-              <i class="fa-li fa fa-check"></i>
-              html and CSS &amp; Scrum</li>
+              SQL &amp; Scrum</li>
+              <li>
+                <i class="fa-li fa fa-check"></i>
+              html and CSS</li>
+              <li>
           </ul>
         </div>
       </section>
@@ -273,12 +274,12 @@
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
         <div class="my-auto">
           <h2 class="mb-5">Interests</h2>
-          <p>Learning new Software Skill</p>
-          <p class="mb-0"> Cooking</p>
+          <p>Learning new Software Skills</p>
+          <p class="mb-0">Cooking</p>
         </div>
       </section>
 
-      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="Certification">
+      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="Certifications">
         <div class="my-auto">
           <h2 class="mb-5">Certifications</h2>
           <ul class="fa-ul mb-0">
@@ -294,7 +295,7 @@
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
               Database SQL for data science with python - IBM</li>
-            </ul>
+          </ul>
         </div>
       </section>
 
